# voiceink-to-notion

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
voiceink_to_notion/: __init__.py  config.py  main.py  notion_client.py  sync_tracker.py  voiceink_reader.py
