[project]
name = "voiceink-to-notion"
version = "0.1.0"
description = "Sync VoiceInk transcriptions to Notion database"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
]

[project.scripts]
voiceink-to-notion = "voiceink_to_notion.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
